<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edtName"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/name"
                android:tag="@string/name"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edtMobile"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/mobile"
                android:tag="@string/mobile"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edtEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"
                android:tag="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edtPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"
                android:tag="@string/login_password_hint"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register" />

        <TextView
            android:id="@+id/txtLogin"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>