<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AddItemFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/addItemCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:elevation="@dimen/margin_5"
            app:cardCornerRadius="2dp"
            app:cardElevation="@dimen/margin_5"
            android:padding="@dimen/margin_10"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProductName"
                    style="@style/parent"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_margin="@dimen/margin_5"

                    >
                    <AutoCompleteTextView
                        android:id="@+id/editTextProdName"
                        style="@style/modifiedEditText"
                        android:background="@android:color/transparent"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:hint="@string/product_name"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputQuantity"
                    style="@style/parent"
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_margin="@dimen/margin_5"
                    >
                    <EditText
                        android:id="@+id/editTextQuantity"
                        style="@style/modifiedEditText"
                        android:background="@android:color/transparent"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:hint="@string/item_quantity"
                        android:inputType="textCapCharacters"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnAddItem"
                    style="@style/styleButton"
                    android:text="@string/add_item"
                    android:textSize="12sp"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight=".7"
                    android:layout_margin="@dimen/margin_5"
                    />




            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addItemCardView"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_above="@+id/btnOrderContinue">


        </androidx.recyclerview.widget.RecyclerView>
        <include
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/empty_screen_layout"
            android:layout_below="@+id/addItemCardView"

            ></include>

            <Button
                android:id="@+id/btnOrderContinue"
                style="@style/styleButton"
                android:text="@string/continue_order"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="@dimen/margin_5"
                android:layout_alignParentBottom="true"

                />
    </RelativeLayout>

    <com.example.kloadingspin.KLoadingSpin
        android:id="@+id/KLoadingSpin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundColor="#55008DFF"
        app:primarySpinnerColor="#ffffff"
        app:rotationSpeedInMs="3000"
        app:text="Placing your order please wait."
        app:secondarySpinnerColor="#FF9800"
        app:textColor="#ffffff"
        app:textSize="80" />
    <com.ausadhi.mvvm.utils.MovableFloatingActionButton
        android:id="@+id/placeOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_order"
        app:fabSize="normal"
        android:background="@color/colorAccent"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:tint="@color/white"
        android:visibility="gone"
        />

</FrameLayout>